--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web",
   "version": "0.1.0",
+  "description": "ゴルフの各ショットの着地点をアプリ上のグリッドにタップして記録し、スマートフォンのジャイロセンサーで傾斜を自動判別。クラブ別・条件別（傾斜、ライ、風、気温）の精度を自動分析し、苦手クラブや傾向を可視化。オフライン記録が可能で、後から自動同期。実戦データに基づいて練習の優先順位を明確にするゴルフ上達支援システム。",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
